<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id ="@+id/friend_wishlist_data"
    tools:context=".Fragments.WishlistFriendCollectionData">

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            style="@style/titles"
            android:layout_weight="0.005"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fr_collection"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_weight="0.1"
                android:id="@+id/collectionCount1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="0"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:textColor="#FF5722"
                android:textSize="18sp" />

            <TextView
                style="@style/texts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/collections"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.9"
                android:textSize="18sp" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleView1"
            android:layout_width="match_parent"
            android:layout_marginTop="3dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_height="0dp"
            android:layout_weight="0.99" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/action1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#03A9F4"
        android:clickable="true"
        android:contentDescription="@string/action_button"
        android:focusable="true"
        android:text="@string/add_new"
        app:icon="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>